<resources>
    <string name="app_name">NEDB</string>
    <string name="device_thumbnail">Device card image</string>
    <string name="detail_image">Detail device image</string>
    <string name="detail_tech_info">technical info</string>
    <string name="detail_device_brief_1">Device brief 1</string>
    <string name="detail_device_brief_2">Device brief 2</string>
    <string name="detail_device_brief_3">Device brief 3</string>
    <string name="detail_device_brief_4">Device brief 4</string>
    <string name="detail_device_name">Device Name</string>
    <string name="detail_device_type">Device Type</string>
    <string name="juniper_fragment">Juniper</string>
    <string name="cisco_fragment">Cisco</string>
    <string name="huawei_fragment">Huawei</string>
    <string name="fragment">Fragment</string>
    <string name="welcome_screen">Welcome Screen</string>
    <string name="about_us">About Us</string>
    <string name="Developer_Picture">Developer Picture</string>
    <string name="information_about_me1">Ramy Magdy</string>
    <string name="information_about_me2">Android Developer</string>
    <string name="information_about_me3">email: ramy.comm@gmail.com</string>
    <string name="reference">References: </string>
    <string name="reference_menu">References</string>
    <string name="summary">SUMMARY</string>
    <string name="topology">Topology</string>
    <string name="Close">Close</string>
    <string name="full_screen_image">Full Screen Image</string>
    <string name="no_internet">"No Network connection available"</string>
    <string name="choose">Choose from below buttons</string>
    <string name="data">data</string>
    <string name="sheet_1">Sheet-1</string>
    <string name="sheet_2">sheet_2</string>
    <string name="banner_ad_unit_id">ca-app-pub-4471979939977787/7396812281</string>
    <string name="appwidget_text">NEDB Widget</string>
    <string name="widget_added_text">Equipment\'s added to widget!</string>
    <string name="widget_not_added_text">Some problem occurred. Try again.</string>
    <string name="add">add to widget</string>
    <string name="ent_email">Enter Email</string>
    <string name="ent_pass">Enter Password</string>
    <string name="ent_name">Enter Name</string>
    <string name="register">Register</string>
    <string name="preparation_text">Prepare Text</string>
    <string name="prepare_pdf">Show PDF</string>
    <string name="prepare_video">Show Video</string>
    <string name="no_video_available_title">Video is not available ! Press to Return</string>
    <string name="not_connected_to_internet">No Internet Connection Available ! Press to Return</string>
    <string name="file_not_existed">File Not Exist ! Press to Return</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="login_failed">Login Failed…That email and password do not match our records :(.</string>
    <string name="login_fail">Login Failed…Something weird happened :(.</string>


    <string name="some_of">Some of the data included in the app are used from below references</string>
    <string name="device_manual">(devices manual)</string>
    <string name="eng_name">Network Maintenance Senior Engineer Mostafa Shehata</string>
    <string name="nmd">(Network Maintenance Devices)</string>
    <string name="eng_name_2">Network Maintenance Engineer Ahmed Araby</string>
    <string name="dev_name">Ramy Magdy</string>
    <string name="dev_contact">E-mail: ramy.comm@gmail.com</string>
    <string name="title">Network Maintenance Engineer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
