<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/about_me_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/information_about_me1"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/about_me_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/information_about_me2"
        android:textAlignment="center"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/about_me_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/information_about_me3"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>
