<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_weight=".4"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/detail_image_view"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:contentDescription="@string/detail_image"
            android:minWidth="200dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/card_margin"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/device_typ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:fontFamily="casual"
                    android:foregroundGravity="center"
                    android:text="@string/detail_device_type"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/device_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/margin_bottom"
                    android:fontFamily="casual"
                    android:foregroundGravity="center"
                    android:text="@string/detail_device_name"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/prepare_pdf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/holo_purple"
                    android:fontFamily="sans-serif"
                    android:text="@string/prepare_pdf"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />


                <Button
                    android:id="@+id/prepare_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/holo_purple"
                    android:fontFamily="sans-serif"
                    android:text="@string/prepare_video"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:text="@string/summary"
            android:textSize="20sp"
            android:textStyle="bold" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:foregroundGravity="left"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detail_overview_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="serif-monospace"
                    android:foregroundGravity="left"
                    android:gravity="start"
                    android:text="@string/detail_device_brief_1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/detail_overview_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="serif-monospace"
                    android:foregroundGravity="left"
                    android:gravity="start"
                    android:text="@string/detail_device_brief_2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/detail_overview_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="serif-monospace"
                    android:foregroundGravity="left"
                    android:gravity="start"
                    android:text="@string/detail_device_brief_3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/detail_overview_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="serif-monospace"
                    android:foregroundGravity="left"
                    android:gravity="start"
                    android:text="@string/detail_device_brief_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="#000000"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>



